made the requested changes for swagger
